[tool.poetry]
name = "research-project-setup"
version = "0.1.0"
description = "Template for working with code release of future research projects"
authors = ["sandeshkatakam <sandeshkatakam@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
